Fixed "characters" typo in message validation when input length is 1

Added IDS_FORM_VALIDATION_TOO_SHORT_PLURAL and updated IDS_FORM_VALIDATION_TOO_SHORT
to ensure we don't have grammatical errors showing during "minlength" validation,
in case input field length = 1

BUG=686842

Review-Url: https://codereview.chromium.org/2737263002
Cr-Commit-Position: refs/heads/master@{#455823}

Former-commit-id: 9589a8db3dc83b7a06b02de71e28d9213ce1d8f7